syntax = "proto3";

package proto;

option go_package = "./;proto";

message Product{
    int32 Id = 1;
    string Name = 2;
    int32 Price = 3;
    int32 ShopId = 4;
}

message ShopProducts{
    repeated Product Products = 1; 
}

message ReqShopProducts{
    int32 ShopId =1;
}

service ProductService {
    rpc GetShopProductsByShopId(ReqShopProducts) returns (stream Product);
}